1. User Status Related Changes 2. Slots Create 3. Slots Lookup
